Fixes critical notice display on mobile.

--- a/myuw/static/css/boilerplate.less
+++ b/myuw/static/css/boilerplate.less
@@ -116,9 +116,9 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
 }
 
 
-#app_notices {
+#app_notices { margin-left: -16px; margin-right: -16px; margin-bottom: 16px;
 
-    @media @desktop { margin-left: 0; margin-right: 0; margin-bottom: 16px; padding: 0 16px; }
+    @media @two-column { margin-left: 0; margin-right: 0; margin-bottom: 16px; padding: 0 16px; }
 
     .notice-header { margin-top: 0; }
 
